# nptool

./: .gitignore  .travis.yml  CNAME  HOWTO  INSTALL  LICENSE  NPEnvironment.bash  NPEnvironment.tchrc  README  README.md  ReleaseNotes.txt  TODO  _config.yml  about.md  authors  credit.md  index.html  manual.md  nptool.csh  nptool.sh  params.json  status.md  support.md
NPAnalysis/TAMU/: Analysis  Analysis.cxx  Analysis.h  CMakeLists.txt  RunToTreat.txt
NPLib/: .gitignore  CMakeLists.txt  CanvasList.txt  FindROOT.cmake  INSTALL  Makefile  Makefile.arch  NPLibConfig.cmake.in  README  Root.cmake  configure  elog.txt  liblist
NPLib/ANU/: ANU.cxx  ANU.h  Makefile  TANUData.cxx  TANUData.h  TANUPhysics.cxx  TANUPhysics.h
NPLib/AnnularS1/: CMakeLists.txt  Makefile  TAnnularS1Physics.cxx  TAnnularS1Physics.h  TS1Data.cxx  TS1Data.h
NPLib/AnnularS2/: CMakeLists.txt  Makefile  TS2Physics.cxx  TS2Physics.h
NPLib/CATS/: CMakeLists.txt  Makefile  TCATSData.cxx  TCATSData.h  TCATSPhysics.cxx  TCATSPhysics.h  TCATSSpectra.cxx  TCATSSpectra.h
NPLib/Calibration/: CMakeLists.txt  NPCalibrationLinkDef1.h  NPCalibrationLinkDef2.h  NPCalibrationSource.cxx  NPCalibrationSource.h  NPSiliconCalibrator.cxx  NPSiliconCalibrator.h
NPLib/CalibrationManager/: CalibrationManager.cxx  CalibrationManager.h  Makefile
NPLib/Charissa/: CMakeLists.txt  Makefile  TCharissaData.cxx  TCharissaData.h  TCharissaPhysics.cxx  TCharissaPhysics.h  TCharissaSpectra.cxx  TCharissaSpectra.h
NPLib/ChateauCristal/: CMakeLists.txt  Makefile  TChateauCristalData.cxx  TChateauCristalData.h  TChateauCristalPhysics.cxx  TChateauCristalPhysics.h
NPLib/Chio/: CMakeLists.txt  Makefile  TChio_anData.cxx  TChio_anData.h  TChio_anPhysics.cxx  TChio_anPhysics.h  TChio_digData.cxx  TChio_digData.h  TChio_digPhysics.cxx  TChio_digPhysics.h
NPLib/ComptonTelescope/: CMakeLists.txt  Makefile  TComptonTelescopeData.cxx  TComptonTelescopeData.h  TComptonTelescopeDataDict.cxx  TComptonTelescopeDataDict.h  TComptonTelescopePhysics.cxx  TComptonTelescopePhysics.h  TComptonTelescopeProcessData.cxx  TComptonTelescopeProcessData.h  TComptonTelescopeProcessDataDict.cxx  TComptonTelescopeProcessDataDict.h  TComptonTelescopeSpectra.cxx  TComptonTelescopeSpectra.h
NPLib/Core/: CMakeLists.txt  CalibrationManager.cxx  ClassSelection.xml  Makefile  NPAnalysisFactory.cxx  NPAnalysisFactory.h  NPCalibrationManager.cxx  NPCalibrationManager.h  NPCore.cxx  NPCore.h  NPCoreLinkdef.h  NPDeltaSpectra.cxx  NPDeltaSpectra.h  NPDeltaSpectraLinkdef.h  NPDetectorFactory.cxx  NPDetectorFactory.h  NPDetectorManager.cxx  NPDetectorManager.h  NPElog.cxx  NPElog.h  NPGlobalSystemOfUnits.h  NPImage.cxx  NPImage.h  NPInputParser.cxx  NPInputParser.h  NPLibVersion.h.in  NPOnline.cxx  NPOnline.h  NPOnlineLinkDef.h  NPOptionManager.cxx  NPOptionManager.h  NPPhysicalConstants.h  NPRandom.cxx  NPRandom.h  NPSpectraServer.cxx  NPSpectraServer.h  NPSystemOfUnits.h  NPVAnalysis.cxx  NPVAnalysis.h  NPVDetector.cxx  (+9 more)
NPLib/CsI/: CMakeLists.txt  Makefile  TCsIData.cxx  TCsIData.h  TCsIDataDict.cxx  TCsIDataDict.h  TCsIPhysics.cxx  TCsIPhysics.cxx~  TCsIPhysics.h  TCsIPhysicsDict.cxx  TCsIPhysicsDict.h
NPLib/DummyDetector/: CMakeLists.txt  Makefile  TDUMMYDetectorData.cxx  TDUMMYDetectorData.h  TDUMMYDetectorDataDict.cxx  TDUMMYDetectorDataDict.h
NPLib/EDEN/: Makefile  TEdenSimuData.cxx  TEdenSimuData.h
NPLib/EXL/: CMakeLists.txt  Makefile  TExlData.cxx  TExlData.h  TExlPhysics.cxx  TExlPhysics.h
NPLib/Eurogam/: CMakeLists.txt  Makefile  TEurogamData.cxx  TEurogamData.h  TEurogamDataDict.cxx  TEurogamDataDict.h
NPLib/Exogam/: CMakeLists.txt  Makefile  TExogamData.cxx  TExogamData.h  TExogamPhysics.cxx  TExogamPhysics.h  TExogamSpectra.cxx  TExogamSpectra.h
NPLib/Fatima/: CMakeLists.txt  Fatima.cxx  Fatima.h  Makefile  TFatimaData.cxx  TFatimaData.h  TFatimaPhysics.cxx  TFatimaPhysics.h
NPLib/GASPARD/: CMakeLists.txt  GaspardTracker.cxx  GaspardTracker.h  GaspardTrackerAnnular.cxx  GaspardTrackerAnnular.h  GaspardTrackerDummyShape.cxx  GaspardTrackerDummyShape.h  GaspardTrackerModule.cxx  GaspardTrackerModule.h  GaspardTrackerNew.cxx  GaspardTrackerNew.h  GaspardTrackerRectangle.cxx  GaspardTrackerSquare.cxx  GaspardTrackerSquare.h  GaspardTrackerTrapezoid.cxx  GaspardTrackerTrapezoid.h  Makefile  TGaspardTrackerData.cxx  TGaspardTrackerData.h  TGaspardTrackerDummyShape.cxx  TGaspardTrackerDummyShape.h  TGaspardTrackerModule.cxx  TGaspardTrackerModule.h  TGaspardTrackerPhysics.cxx  TGaspardTrackerPhysics.h  TGaspardTrackerPhysicsNew.cxx  TGaspardTrackerPhysicsNew.h  TGaspardTrackerTrapezoid.cxx  TGaspardTrackerTrapezoid.h
NPLib/HYDE/: HydeTracker.cxx  HydeTracker.h  Makefile  THydeTrackerData.cxx  THydeTrackerData.h  THydeTrackerPhysics.cxx  THydeTrackerPhysics.h
NPLib/HYDE2/: CMakeLists.txt  Hyde2Tracker.h  Hyde2TrackerModule.h  Hyde2TrackerSquare1.h  Hyde2TrackerTrapezoid1.cxx  Makefile  Makefile_shorter  THyde2TrackerData.h  THyde2TrackerPhysics.cxx  THyde2TrackerPhysics.h
NPLib/Helios/: CMakeLists.txt  Helios.cxx  Helios.h  Makefile  THeliosData.cxx  THeliosData.h  THeliosPhysics.cxx  THeliosPhysics.h
NPLib/HiRA/: CMakeLists.txt  Makefile  THiraData.cxx  THiraData.h  THiraDataDict.cxx  THiraDataDict.h
NPLib/Hira/: CMakeLists.txt  THiraData.h  THiraPhysics.cxx  THiraPhysics.h
NPLib/IORoot/: Makefile  RootInput.cxx  RootInput.h  RootOutput.cxx  RootOutput.h
NPLib/InitialConditions/: CMakeLists.txt  Makefile  TInitialConditions.cxx  TInitialConditions.h
NPLib/InteractionCoordinates/: CMakeLists.txt  Makefile  TInteractionCoordinates.cxx  TInteractionCoordinates.h
NPLib/LaBr3/: CMakeLists.txt  Makefile  TLaBr3Data.cxx  TLaBr3Data.h  TLaBr3Physics.cxx  TLaBr3Physics.h  TLaBr3Spectra.cxx  TLaBr3Spectra.h
NPLib/Lassa/: CMakeLists.txt  TLassaData.h  TLassaPhysics.cxx
NPLib/MUST2/: CMakeLists.txt  Makefile  Must2Array.cxx  Must2Array.h  TMust2Data.cxx  TMust2Data.h  (+4 more)
NPSimulation/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Makefile.geant4  PhysicsListOption.txt  Simulation.cc  Simulation.cc.new  gui.mac  vasigamma.mac  vis.mac
(+2460 files in other folders)
