add_custom_command(OUTPUT TAnnularS1PhysicsDict.cxx TAnnularS1PhysicsDict_rdict.pcm TAnnularS1Physics.rootmap COMMAND genreflex TAnnularS1Physics.h -o TAnnularS1PhysicsDict.cxx -I../Core --rootmap=TAnnularS1Physics.rootmap --rootmap-lib=libNPAnnularS1 --quiet DEPENDS TAnnularS1Physics.h)
add_custom_command(OUTPUT TS1DataDict.cxx TS1DataDict_rdict.pcm TS1Data.rootmap COMMAND genreflex TS1Data.h -o TS1DataDict.cxx -I../Core --rootmap=TS1Data.rootmap --rootmap-lib=libNPAnnularS1 --quiet DEPENDS TS1Data.h)
add_library(NPAnnularS1 SHARED TS1Data.cxx TAnnularS1Physics.cxx TS1DataDict.cxx TAnnularS1PhysicsDict.cxx)
target_link_libraries(NPAnnularS1 ${ROOT_LIBRARIES} NPCore) 
install(FILES TS1Data.h TAnnularS1Physics.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})
install(FILES TS1DataDict_rdict.pcm TAnnularS1PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TS1Data.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TAnnularS1Physics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
