add_custom_command(OUTPUT TAnnularS1PhysicsDict.cxx TAnnularS1PhysicsDict_rdict.pcm TAnnularS1Physics.rootmap COMMAND rootcint -f TAnnularS1PhysicsDict.cxx -rmf TAnnularS1Physics.rootmap -rml libNPAnnularS1.dylib -I../Core -c TAnnularS1Physics.h DEPENDS TAnnularS1Physics.h)
add_custom_command(OUTPUT TS1DataDict.cxx TS1DataDict_rdict.pcm TS1Data.rootmap COMMAND rootcint -f TS1DataDict.cxx -rmf TS1Data.rootmap -rml libNPAnnularS1.dylib -I../Core -c TS1Data.h DEPENDS TS1Data.h)
add_library(NPAnnularS1 SHARED TS1Data.cxx TAnnularS1Physics.cxx TS1DataDict.cxx TAnnularS1PhysicsDict.cxx)
target_link_libraries(NPAnnularS1 ${ROOT_LIBRARIES} NPCore) 
install(FILES TS1Data.h TAnnularS1Physics.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})
install(FILES TS1DataDict_rdict.pcm TAnnularS1PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TS1Data.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TAnnularS1Physics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TS1DataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TAnnularS1PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TS1DataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TAnnularS1PhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
