add_custom_command(OUTPUT TCharissaPhysicsDict.cxx TCharissaPhysicsDict_rdict.pcm TCharissaPhysics.rootmap COMMAND rootcint -f TCharissaPhysicsDict.cxx -rmf TCharissaPhysics.rootmap -rml libNPCharissa.dylib -I../Core -c TCharissaPhysics.h DEPENDS TCharissaPhysics.h)
add_custom_command(OUTPUT TCharissaDataDict.cxx TCharissaDataDict_rdict.pcm TCharissaData.rootmap COMMAND rootcint -f TCharissaDataDict.cxx -rmf TCharissaData.rootmap -rml libNPCharissa.dylib -I../Core -c TCharissaData.h DEPENDS TCharissaData.h)
add_library(NPCharissa SHARED TCharissaData.cxx TCharissaPhysics.cxx TCharissaDataDict.cxx TCharissaPhysicsDict.cxx TCharissaSpectra.cxx)
target_link_libraries(NPCharissa ${ROOT_LIBRARIES} NPCore) 
install(FILES TCharissaData.h TCharissaPhysics.h TCharissaSpectra.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TCharissaData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TCharissaPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TCharissaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TCharissaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TCharissaDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TCharissaPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
