add_custom_command(OUTPUT TChateauCristalPhysicsDict.cxx TChateauCristalPhysicsDict_rdict.pcm TChateauCristalPhysics.rootmap COMMAND ../scripts/build_dict.sh TChateauCristalPhysics.h TChateauCristalPhysicsDict.cxx TChateauCristalPhysics.rootmap libNPChateauCristal.dylib DEPENDS TChateauCristalPhysics.h)
add_custom_command(OUTPUT TChateauCristalDataDict.cxx TChateauCristalDataDict_rdict.pcm TChateauCristalData.rootmap COMMAND ../scripts/build_dict.sh TChateauCristalData.h TChateauCristalDataDict.cxx TChateauCristalData.rootmap libNPChateauCristal.dylib DEPENDS TChateauCristalData.h)
add_library(NPChateauCristal SHARED TChateauCristalData.cxx TChateauCristalPhysics.cxx TChateauCristalDataDict.cxx TChateauCristalPhysicsDict.cxx )
target_link_libraries(NPChateauCristal ${ROOT_LIBRARIES} NPCore) 
install(FILES TChateauCristalData.h TChateauCristalPhysics.h DESTINATION ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(FILES TChateauCristalData.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TChateauCristalPhysics.rootmap DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TChateauCristalDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TChateauCristalPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TChateauCristalDataDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
install(FILES TChateauCristalPhysicsDict_rdict.pcm DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
